# lake-r

./: README.md  gen_para.py  pyproject.toml  server.py
data/: sample1.parquet
