[project]
name = "lake-r"
version = "0.1.0"
description = "MCP for data lake access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
]
authors = [
    { name="John Doe", email="john.doe@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

